# object-oriented-programming-lab5

./: CMakeLists.txt  README.md  main.cpp
memory/: MapMemoryResource.h
tests/: test_forward_list.cpp
types/: TestStruct.h
